[project]
name = "econolab"
version = "0.1.0"
description = "A package for agent-based simulations of economic activity."
authors = [
    {name = "Fill Staley",email = "fillstaley@gmail.com"}
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "econolab", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
