[project]
name = "econolab"
version = "0.1.1"
description = "A package for agent-based simulations of economic activity."
authors = [
    {name = "Fill Staley",email = "fillstaley@gmail.com"}
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{include = "econolab", from = "src"}]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pytest = "^8.3.5"
sphinx = "^8.2.3"
sphinx-autodoc-typehints = "^3.2.0"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
