[project]
name = "boltzmann-banking"
version = "0.1.0"
description = "An ABM of random spending and borrowing"
authors = [{ name = "Fill Staley", email = "fillstaley@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mesa (>=3.1.3,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "econolab @ file:///Users/fill/Projects/econolab",
    "seaborn (>=0.13.2,<0.14.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
econolab = {develop = true}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
